--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.properties.hibernate.show_sql=true
 
 #????? ???????? HTTP ?????? Put, patch, delete
 spring.mvc.hiddenmethod.filter.enabled=true
+spring.jpa.open-in-view=true
